Use Antora name of security
Issue gh-13327

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -6,6 +6,7 @@ antora:
   - require: '@springio/antora-extensions/latest-version-extension'
   - require: '@springio/antora-extensions/inject-collector-cache-config-extension'
   - '@antora/collector-extension'
+  - ./lib/antora/extensions/fix-component-name-display.js
   - '@antora/atlas-extension'
   - require: '@springio/antora-extensions/tabs-migration-extension'
     # uncomment this option to save the migrated content to the worktree
@@ -13,6 +14,8 @@ antora:
     unwrap_example_block: always
   - require: '@springio/antora-extensions/publish-docsearch-config-extension'
     index_name: 'spring-security-docs'
+    root_component_name: 'security'
+  - require: '@springio/antora-extensions/root-component-extension'
     root_component_name: 'security'
 site:
   title: Spring Security
