--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ micrometerVersion=1.10.8
 openSamlVersion=4.1.1
 version=6.0.5-SNAPSHOT
 kotlinVersion=1.7.22
-samplesBranch=main
+samplesBranch=6.0.x
 org.gradle.jvmargs=-Xmx3g -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.parallel=true
 org.gradle.caching=true
