Update to antora-ui-spring v0.3.1
- Adds GitHub Project Link
- Adds Stackoverflow Link
- Adds Related Documentation links

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -21,6 +21,7 @@ content:
     start_path: docs
 asciidoc:
   attributes:
+    page-stackoverflow-url: https://stackoverflow.com/tags/spring-security
     page-pagination: ''
     hide-uri-scheme: '@'
     tabs-sync-option: '@'
@@ -33,7 +34,7 @@ urls:
   redirect_facility: httpd
 ui:
   bundle:
-    url: https://github.com/spring-io/antora-ui-spring/releases/download/v0.3.0/ui-bundle.zip
+    url: https://github.com/spring-io/antora-ui-spring/releases/download/v0.3.1/ui-bundle.zip
     snapshot: true
 runtime:
   log:
