--- a/lib/antora/templates/per-branch-antora-playbook.yml
+++ b/lib/antora/templates/per-branch-antora-playbook.yml
@@ -20,6 +20,7 @@ content:
     worktrees: true
 asciidoc:
   attributes:
+    page-stackoverflow-url: https://stackoverflow.com/tags/spring-security
     hide-uri-scheme: '@'
     page-pagination: ''
     primary-site-url: https://docs.spring.io/spring-security/reference
@@ -34,5 +35,5 @@ runtime:
     failure_level: warn
 ui:
   bundle:
-    url: https://github.com/spring-io/antora-ui-spring/releases/download/v0.3.0/ui-bundle.zip
+    url: https://github.com/spring-io/antora-ui-spring/releases/download/v0.3.1/ui-bundle.zip
     snapshot: true
