--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,8 @@ apply plugin: 'locks'
 apply plugin: 's101'
 apply plugin: 'io.spring.convention.root'
 apply plugin: 'org.jetbrains.kotlin.jvm'
-apply plugin: 'org.springframework.security.update-version'
-apply plugin: 'org.springframework.security.sagan'
-apply plugin: 'org.springframework.github.milestone'
-apply plugin: 'org.springframework.github.changelog'
-apply plugin: 'org.springframework.github.release'
 apply plugin: 'org.springframework.security.versions.verify-dependencies-versions'
+apply plugin: 'io.spring.security.release'
 
 group = 'org.springframework.security'
 description = 'Spring Security'
@@ -37,53 +33,12 @@ repositories {
 	mavenCentral()
 }
 
-tasks.named("saganCreateRelease") {
-	referenceDocUrl = "https://docs.spring.io/spring-security/reference/{version}/index.html"
-	apiDocUrl = "https://docs.spring.io/spring-security/site/docs/{version}/api/"
-}
-
-tasks.named("gitHubCheckMilestoneHasNoOpenIssues") {
-	repository {
-		owner = "spring-projects"
-		name = "spring-security"
-	}
-}
-
-tasks.named("gitHubNextReleaseMilestone") {
-	repository {
-		owner = "spring-projects"
-		name = "spring-security"
-	}
-}
-
-tasks.named("gitHubCheckNextVersionDueToday") {
-	repository {
-		owner = "spring-projects"
-		name = "spring-security"
-	}
-}
-
-tasks.named("scheduleNextRelease") {
-	repository {
-		owner = "spring-projects"
-		name = "spring-security"
-	}
+springRelease {
 	weekOfMonth = 3
 	dayOfWeek = 1
-}
-
-tasks.named("createGitHubRelease") {
-	repository {
-		owner = "spring-projects"
-		name = "spring-security"
-	}
-}
-
-tasks.named("dispatchGitHubWorkflow") {
-	repository {
-		owner = "spring-projects"
-		name = "spring-security"
-	}
+	referenceDocUrl = "https://docs.spring.io/spring-security/reference/{version}/index.html"
+	apiDocUrl = "https://docs.spring.io/spring-security/docs/{version}/api/"
+	replaceSnapshotVersionInReferenceDocUrl = true
 }
 
 subprojects {
