--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ reactorVersion=2022.0.8
 springJavaformatVersion=0.0.39
 springBootVersion=3.1.1
 springFrameworkVersion=6.0.10
-micrometerVersion=1.10.8
+micrometerVersion=1.12.0-M1
 openSamlVersion=4.3.0
 version=6.2.0-SNAPSHOT
 kotlinVersion=1.8.22
