Update org.springframework to 6.1.0-M2
Closes gh-13544

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ aspectjVersion=1.9.19
 reactorVersion=2022.0.9
 springJavaformatVersion=0.0.39
 springBootVersion=3.1.1
-springFrameworkVersion=6.0.10
+springFrameworkVersion=6.1.0-M2
 micrometerVersion=1.12.0-M1
 openSamlVersion=4.3.0
 version=6.2.0-SNAPSHOT
