Prepare for Spring Security 6.2
- Change the build to look for milestone dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext.milestoneBuild = !(snapshotBuild || releaseBuild)
 
 repositories {
 	mavenCentral()
+	maven { url "https://repo.spring.io/milestone" }
 }
 
 tasks.named("saganCreateRelease") {
@@ -102,7 +103,6 @@ updateDependenciesSettings {
 	})
 	dependencyExcludes {
 		majorVersionBump()
-		minorVersionBump()
 		alphaBetaVersions()
 		snapshotVersions()
 		addRule { components ->
