--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ plugins {
 dependencyResolutionManagement {
 	repositories {
 		mavenCentral()
+		maven { url "https://repo.spring.io/milestone" }
 	}
 }
 
