--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ springFrameworkVersion=6.1.0-M2
 micrometerVersion=1.12.0-M1
 openSamlVersion=4.3.0
 version=6.2.0-SNAPSHOT
-kotlinVersion=1.8.22
+kotlinBuildDependencyVersion=1.8.22
+kotlinDependencyVersion=1.9.0
 samplesBranch=main
 org.gradle.jvmargs=-Xmx3g -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.parallel=true
