--- a/dependencies/spring-security-dependencies.gradle
+++ b/dependencies/spring-security-dependencies.gradle
@@ -12,7 +12,7 @@ dependencies {
 	api platform("io.rsocket:rsocket-bom:1.1.4")
 	api platform("org.junit:junit-bom:5.10.0-RC1")
 	api platform("org.mockito:mockito-bom:4.11.0")
-	api platform("org.springframework.data:spring-data-bom:2022.0.7")
+	api platform("org.springframework.data:spring-data-bom:$springDataVersion")
 	api platform("org.jetbrains.kotlin:kotlin-bom:$kotlinDependencyVersion")
 	api platform("org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.7.2")
 	api platform("com.fasterxml.jackson:jackson-bom:2.15.2")
