--- a/config/spring-security-config.gradle
+++ b/config/spring-security-config.gradle
@@ -1,4 +1,5 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import trang.RncToXsd
 
 apply plugin: 'io.spring.convention.spring-module'
 apply plugin: 'trang'
@@ -109,7 +110,7 @@ dependencies {
 	testRuntimeOnly 'org.hsqldb:hsqldb'
 }
 
-rncToXsd {
+tasks.named('rncToXsd', RncToXsd).configure {
 	rncDir = file('src/main/resources/org/springframework/security/config/')
 	xsdDir = rncDir
 	xslFile = new File(rncDir, 'spring-security.xsl')
