Add rncToXsd task to resources set
This addresses a deprecation warning causing build caching to be
disabled for some tasks. With this change, we tell Gradle that the
rncToXsd task produces output that should be considered a resource.
This clears up ambiguities when computing the task graph.

--- a/config/spring-security-config.gradle
+++ b/config/spring-security-config.gradle
@@ -116,6 +116,14 @@ tasks.named('rncToXsd', RncToXsd).configure {
 	xslFile = new File(rncDir, 'spring-security.xsl')
 }
 
+sourceSets {
+	main {
+		resources {
+			srcDir(tasks.named('rncToXsd'))
+		}
+	}
+}
+
 tasks.withType(KotlinCompile).configureEach {
 	kotlinOptions {
 		languageVersion = "1.3"
@@ -124,8 +132,6 @@ tasks.withType(KotlinCompile).configureEach {
 		jvmTarget = "1.8"
 	}
 }
-
-build.dependsOn rncToXsd
 
 compileTestJava {
 	exclude "org/springframework/security/config/annotation/web/configurers/saml2/**", "org/springframework/security/config/http/Saml2*"
