Add milestone repo for buildSrc

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -10,6 +10,7 @@ sourceCompatibility = JavaVersion.VERSION_17
 repositories {
 	gradlePluginPortal()
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 sourceSets {
