--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ aspectjVersion=1.9.20
 reactorVersion=2023.0.0-M2
 springJavaformatVersion=0.0.39
 springBootVersion=3.1.1
-springDataVersion=2022.0.7
+springDataVersion=2023.1.0-M2
 springFrameworkVersion=6.1.0-M4
 micrometerVersion=1.12.0-M2
 openSamlVersion=4.3.0
