Add dependency between rncToXsd and versionlessXsd
Since processResources is configured directly instead of via the source
set container, an explicit dependency task between rncToXsd and
versionlessXsd must be defined.

--- a/config/spring-security-config.gradle
+++ b/config/spring-security-config.gradle
@@ -117,11 +117,6 @@ dependencies {
 	testRuntimeOnly 'org.hsqldb:hsqldb'
 }
 
-def versionlessXsd = project.tasks.create("versionlessXsd", CreateVersionlessXsdTask) {
-	inputFiles.from(project.sourceSets.main.resources)
-	versionlessXsdFile = project.layout.buildDirectory.file("versionlessXsd/spring-security.xsd")
-}
-
 def rncToXsd = tasks.named('rncToXsd', RncToXsd)
 rncToXsd.configure {
 	rncDir = file('src/main/resources/org/springframework/security/config/')
@@ -129,14 +124,19 @@ rncToXsd.configure {
 	xslFile = new File(rncDir, 'spring-security.xsl')
 }
 
+def versionlessXsd = tasks.register("versionlessXsd", CreateVersionlessXsdTask) {
+	inputFiles.from(rncToXsd.map { task -> project.fileTree(task.xsdDir) })
+	versionlessXsdFile = project.layout.buildDirectory.file("versionlessXsd/spring-security.xsd")
+}
+
 tasks.named('processResources', ProcessResources).configure {
-    from(versionlessXsd) {
-        into 'org/springframework/security/config/'
-    }
-    from(rncToXsd) {
-        duplicatesStrategy DuplicatesStrategy.EXCLUDE
-        into 'org/springframework/security/config/'
-    }
+	from(versionlessXsd) {
+		into 'org/springframework/security/config/'
+	}
+	from(rncToXsd) {
+		duplicatesStrategy DuplicatesStrategy.EXCLUDE
+		into 'org/springframework/security/config/'
+	}
 }
 
 tasks.withType(KotlinCompile).configureEach {
