Use Java 17 toolchain for Kotlin
Issue gh-13811

--- a/build.gradle
+++ b/build.gradle
@@ -136,7 +136,11 @@ subprojects {
 			languageVersion = JavaLanguageVersion.of(toolchainVersion())
 		}
 	}
-
+	kotlin {
+		jvmToolchain {
+			languageVersion = JavaLanguageVersion.of(17)
+		}
+	}
 	tasks.withType(JavaCompile).configureEach {
 		options.encoding = "UTF-8"
 		options.compilerArgs.add("-parameters")
