Fix Tests on JDK 21
Issue gh-13811

--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,7 @@ subprojects {
 	tasks.withType(JavaCompile).configureEach {
 		options.encoding = "UTF-8"
 		options.compilerArgs.add("-parameters")
+		options.release.set(17)
 	}
 }
 
