--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,7 @@ updates:
     ignore:
       - dependency-name: "com.nimbusds:nimbus-jose-jwt" # nimbus-jose-jwt gets updated when oauth2-oidc-sdk is updated to ensure consistency
       - dependency-name: "org.python:jython" # jython updates break integration tests
+      - dependency-name: "org.apache.directory.server:*" # ApacheDS version > 1.5.5 contains break changes
       - dependency-name: "org.junit:junit-bom"
         update-types: [ "version-update:semver-major" ]
       - dependency-name: "org.mockito:mockito-bom"
@@ -32,6 +33,7 @@ updates:
     ignore:
       - dependency-name: "com.nimbusds:nimbus-jose-jwt" # nimbus-jose-jwt gets updated when oauth2-oidc-sdk is updated to ensure consistency
       - dependency-name: "org.python:jython" # jython updates break integration tests
+      - dependency-name: "org.apache.directory.server:*" # ApacheDS version > 1.5.5 contains break changes
       - dependency-name: "org.junit:junit-bom"
         update-types: [ "version-update:semver-major" ]
       - dependency-name: "org.mockito:mockito-bom"
@@ -51,6 +53,7 @@ updates:
     ignore:
       - dependency-name: "com.nimbusds:nimbus-jose-jwt" # nimbus-jose-jwt gets updated when oauth2-oidc-sdk is updated to ensure consistency
       - dependency-name: "org.python:jython" # jython updates break integration tests
+      - dependency-name: "org.apache.directory.server:*" # ApacheDS version > 1.5.5 contains break changes
       - dependency-name: "org.junit:junit-bom"
         update-types: [ "version-update:semver-major" ]
       - dependency-name: "org.mockito:mockito-bom"
@@ -70,6 +73,7 @@ updates:
     ignore:
       - dependency-name: "com.nimbusds:nimbus-jose-jwt" # nimbus-jose-jwt gets updated when oauth2-oidc-sdk is updated to ensure consistency
       - dependency-name: "org.python:jython" # jython updates break integration tests
+      - dependency-name: "org.apache.directory.server:*" # ApacheDS version > 1.5.5 contains break changes
       - dependency-name: "io.mockk:mockk" # mockk updates break tests
       - dependency-name: "org.opensaml:*" # org.opensaml maintains two different versions, so it must be updated manually
       - dependency-name: "org.junit:junit-bom"
