Do Not Run Some Workflows on Dependabot's PRs
Issue gh-13873

(cherry picked from commit 3aae03b1b2414c847ec61bb430ba4445c1bcadf5)

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,6 +1,9 @@
 name: CI
 
 on:
+  pull_request:
+    branches-ignore:
+      - "dependabot/**"
   push:
     branches-ignore:
       - "dependabot/**"
