--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -103,3 +103,5 @@ org-jfrog-buildinfo-build-info-extractor-gradle = "org.jfrog.buildinfo:build-inf
 org-sonarsource-scanner-gradle-sonarqube-gradle-plugin = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
 
 [plugins]
+
+org-gradle-wrapper-upgrade = "org.gradle.wrapper-upgrade:0.11.4"
