Set up Git configuration on Gradle Wrapper Workflow
Issue gh-13865

--- a/.github/workflows/gradle-wrapper-upgrade-execution.yml
+++ b/.github/workflows/gradle-wrapper-upgrade-execution.yml
@@ -10,6 +10,10 @@ jobs:
     name: Execution
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Git configuration
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: git config --global url."https://unused-username:${TOKEN}@github.com/".insteadOf "https://github.com/"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up JDK 17
