Configure user and email for Grade Wrapper Workflow
Issue gh-13865

--- a/.github/workflows/gradle-wrapper-upgrade-execution.yml
+++ b/.github/workflows/gradle-wrapper-upgrade-execution.yml
@@ -13,7 +13,10 @@ jobs:
       - name: Set up Git configuration
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: git config --global url."https://unused-username:${TOKEN}@github.com/".insteadOf "https://github.com/"
+        run: |
+          git config --global url."https://unused-username:${TOKEN}@github.com/".insteadOf "https://github.com/"
+          git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
+          git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up JDK 17
