Use Related Docs Static Page
- Update antora-ui-spring
- Update antora-extensions
- Configure related pages

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -23,7 +23,8 @@ content:
 asciidoc:
   attributes:
     page-stackoverflow-url: https://stackoverflow.com/tags/spring-security
-    page-pagination: ''
+    page-related-doc-categories: security
+    page-related-doc-projects: framework,graphql
     hide-uri-scheme: '@'
     tabs-sync-option: '@'
   extensions:
@@ -35,7 +36,7 @@ urls:
   redirect_facility: httpd
 ui:
   bundle:
-    url: https://github.com/spring-io/antora-ui-spring/releases/download/v0.4.2/ui-bundle.zip
+    url: https://github.com/spring-io/antora-ui-spring/releases/download/v0.4.3/ui-bundle.zip
     snapshot: true
 runtime:
   log:
