Allow minor versions for org.springframework group id
Issue gh-14023

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,8 @@ updates:
         update-types: [ "version-update:semver-major" ]
       - dependency-name: "org.mockito:mockito-bom"
         update-types: [ "version-update:semver-major" ]
+      - dependency-name: "org.springframework*"
+        update-types: [ "version-update:semver-major" ]
       - dependency-name: "*"
         update-types: [ "version-update:semver-major", "version-update:semver-minor" ]
 
