--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -4,7 +4,9 @@ plugins {
 	id "groovy"
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
 	gradlePluginPortal()
