--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -44,6 +44,7 @@ updates:
       - dependency-name: "com.nimbusds:nimbus-jose-jwt" # nimbus-jose-jwt gets updated when oauth2-oidc-sdk is updated to ensure consistency
       - dependency-name: "org.python:jython" # jython updates break integration tests
       - dependency-name: "org.apache.directory.server:*" # ApacheDS version > 1.5.5 contains break changes
+      - dependency-name: "org.apache.directory.shared:*" # ApacheDS version > 0.9.15 contains breaking changes
       - dependency-name: "org.junit:junit-bom"
         update-types: [ "version-update:semver-major" ]
       - dependency-name: "org.mockito:mockito-bom"
