--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 springBootVersion=3.1.1
 version=6.2.1-SNAPSHOT
-samplesBranch=main
+samplesBranch=6.2.x
 org.gradle.jvmargs=-Xmx3g -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.parallel=true
 org.gradle.caching=true
