--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -98,21 +98,25 @@ updates:
 
   - package-ecosystem: github-actions
     target-branch: "main"
+    milestone: 326 # 6.3.x
     directory: "/"
     schedule:
       interval: weekly
   - package-ecosystem: github-actions
     target-branch: "6.2.x"
+    milestone: 319 # 6.2.x
     directory: "/"
     schedule:
       interval: weekly
   - package-ecosystem: github-actions
     target-branch: "6.1.x"
+    milestone: 318 # 6.1.x
     directory: "/"
     schedule:
       interval: weekly
   - package-ecosystem: github-actions
     target-branch: "5.8.x"
+    milestone: 246 # 5.8.x
     directory: "/"
     schedule:
       interval: weekly
