--- a/dependencies/spring-security-dependencies.gradle
+++ b/dependencies/spring-security-dependencies.gradle
@@ -81,6 +81,7 @@ dependencies {
 		api libs.org.apache.maven.resolver.maven.resolver.impl
 		api libs.org.apache.maven.resolver.maven.resolver.transport.http
 		api libs.org.apache.maven.maven.resolver.provider
+		api libs.org.instancio.instancio.junit
 	}
 }
 
