Add permission to Edit Dependabot PR workflow
Issue gh-14486

--- a/.github/workflows/edit-dependabot-pr.yml
+++ b/.github/workflows/edit-dependabot-pr.yml
@@ -15,6 +15,7 @@ jobs:
   edit-dependabot-pr:
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
+    permissions: write-all
     steps:
 
       - uses: actions/checkout@v4
