Ignore spring-io/* and spring-security-release-tools/* for github-actions updates

--- a/.github/dependabot.template.yml
+++ b/.github/dependabot.template.yml
@@ -37,3 +37,5 @@ updates:
       interval: weekly
     ignore:
       - dependency-name: "sjohnr/*"
+      - dependency-name: "spring-io/*"
+      - dependency-name: "spring-security-release-tools/*"
