--- a/.github/workflows/dependabot-auto-merge-forward.yml
+++ b/.github/workflows/dependabot-auto-merge-forward.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_ACTIONS_REPO_TOKEN }}
       - name: Setup GitHub User
         id: setup-gh-user
         run: |
