Ignore dependabot branches on trigger auto merge

--- a/.github/workflows/trigger-dependabot-auto-merge-forward.yml
+++ b/.github/workflows/trigger-dependabot-auto-merge-forward.yml
@@ -2,8 +2,8 @@ name: Trigger Dependabot Auto Merge Forward
 
 on:
   push:
-    branches:
-      - '*.x'
+    branches-ignore:
+      - "dependabot/**"
 
 permissions: read-all
 
